--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" media="screen and (max-width: 639px" href="./phone.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>HaalChal</title>
+    <title>HaalChal - Developed by Roshan Bishi</title>
 </head>
 
 <body>
