--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,14 @@
             </form>
         </div>
     </div>
+    <footer>
+        <div class="rightHolder">
 
+            <p>This site is designed by Roshan Bishi and hene all rights are reserved.</p>
+            <p><a href="https://github.com/Roshan1115" target="_blank">My Github Profile</a></p>
+        </div>
+    </footer>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="./client.js"></script>
 </body>
