fixed the footer bug

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,11 @@
     </div>
     <footer>
         <div class="rightHolder">
+            <center>
 
-            <p>This site is designed by Roshan Bishi and hene all rights are reserved.</p>
-            <p><a href="https://github.com/Roshan1115" target="_blank">My Github Profile</a></p>
+                <p>This site is designed by Roshan Bishi and hene all rights are reserved.</p>
+            </center>
+            <p><a href="https://github.com/Roshan1115" target="_blank">| My Github Profile |</a></p>
         </div>
     </footer>
     
